--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-<head>
-     <meta charset="utf-8">
-     <title>Мой первый сайт</title>
-</head>
-<body>
-     <p>Название компании: АО «Почта России»
-         Тел.: +7 (495) 956-20-67</p>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+  </head>
+  <body>
+
+  </body>
 </html>
